Fix word wrap in instruments dropwdown

--- a/smallslive/static/sass/pages/_search.scss
+++ b/smallslive/static/sass/pages/_search.scss
@@ -804,6 +804,7 @@ body.headers-1 {
   margin-left: 30px;
   align-self: center;
   text-align: center;
+  white-space: nowrap;
 
   @media (max-width: $screen-md-max) {
     @include caret;
